2005-02-07  Richard Henderson  <rth@redhat.com>

	* iconvdata/jis0208.h (struct jisx0208_ucs_idx): Move before use.

2005-02-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/dl-machine.h (elf_machine_rela): Remove code using
	RESOLVE.

2005-02-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Makre sure registers are
	set correctly.

2005-01-07  Richard Henderson  <rth@redhat.com>

	* math/math_private.h (__copysign): Define as builtin for gcc 4.
	(__copysignf, __copysignl): Likewise.
	* sysdeps/alpha/fpu/bits/mathinline.h (copysign): Don't define
	for gcc 4.0.
	(copysignf, copysignl, fabsf, fabs): Likewise.
	(__copysign, __copysignf, __copysignl): Remove.
	(__fabs, __fabsf): Remove.

2005-01-07  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (open_path): If rtld_search_dirs is in RELRO segment,
	avoid writing to it if none of the standard search directories exist.

2005-02-07  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #700]
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S
	(__novec_setcontext, __setcontext): Fix typo so CCR is restored.
	Load MSR as a doubleword.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S
	(__novec_swapcontext, __swapcontext): Likewise.

2005-02-07  Ulrich Drepper  <drepper@redhat.com>

	* iconv/iconv_prog.c (main): Provide more help in case on an error.

	* sysdeps/unix/sysv/linux/i386/sysdep.h (check_consistency): Define.

2005-02-07  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd.c (termination_handler): Avoid segfault if some database
	is not enabled.

	* nscd/nscd_getai.c (__nscd_getai): If ai_resp->found == -1, set
	__nss_not_use_nscd_hosts and return -1.
	* nscd/nscd_initgroups.c (__nscd_getgrouplist): If
	initgr_resp->found == -1, set __nss_not_use_nscd_group and return -1.
	Avoid leaking sockets.

2005-01-28  Andreas Schwab  <schwab@suse.de>
	    H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #677]
	* elf/dl-runtime.c (fixup): Change return type to