@@ -1,5 +1,5 @@
 # This file is updated automatically by Makefile.
 glibc-branch := fedora
 glibc-base := HEAD
-fedora-sync-date := 2005-02-08 09:48 UTC
-fedora-sync-tag := fedora-glibc-20050208T0948
+fedora-sync-date := 2005-02-08 22:13 UTC
+fedora-sync-tag := fedora-glibc-20050208T2213
