@@ -1,4 +1,4 @@
-%define glibcrelease 6
+%define glibcrelease 7
 %define auxarches i586 i686 athlon sparcv9 alphaev6
 %define prelinkarches noarch
 %define nptlarches i386 i686 athlon x86_64 ia64 s390 s390x sparcv9 ppc ppc64
@@ -10,7 +10,7 @@ Summary: The GNU libc libraries.
 Name: glibc
 Version: %{glibcversion}
 Release: %{glibcrelease}
-Copyright: LGPL
+License: LGPL
 Group: System Environment/Libraries
 %define glibcsrcdir %{name}-%{glibcdate}
 Source0: %{glibcsrcdir}.tar.bz2
@@ -1270,6 +1270,10 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Tue Feb  8 2005 Jakub Jelinek <jakub@redhat.com> 2.3.4-7
+- update from CVS
+  - fix TLS handling in linuxthreads
+
 * Tue Feb  8 2005 Jakub Jelinek <jakub@redhat.com> 2.3.4-6
 - update from CVS
   - ld.so auditing
