@@ -1,3 +1,12 @@
+2005-02-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf/dl-load.c (_dl_map_object_from_fd): Fix a typo.
+
+2005-02-08  Andreas Schwab  <schwab@suse.de>
+
+	* sysdeps/m68k/dl-machine.h (elf_machine_rela): Remove use of
+	RESOLVE.
+
 2005-02-07  Richard Henderson  <rth@redhat.com>
 
 	* iconvdata/jis0208.h (struct jisx0208_ucs_idx): Move before use.
